For the main-flex items I applied flex-direction, justify-content, align-items, text-align, and min-height. These properties align and center the html elements on the page, also the min-height property prevents the elements from being squished vertically to the top of the page

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,6 @@ the element wraps around the whole body element
     width: 85%;
     margin: 0 auto;
     background-color: red;
-     /* text-align: center;  */
    }
 
 
@@ -131,8 +130,11 @@ flex-nav is a div for the entire navigation bar, the divs "about-flex" and "gmai
 
   .main-flex{
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
   }
 
   .searchbtns-flex {
